--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,16 +1,17 @@
 FROM python:3.10-slim
+
 MAINTAINER Vladimir Yartsev <proger@vgafk.ru>
 
+WORKDIR /code
 
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
-COPY requirements.txt requirements.txt
+COPY requirements.txt .
+
 RUN pip install --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
 
-#VOLUME ["/config"]
-COPY src/* .
-#COPY ./config ./config
+COPY src/ .
 
-CMD python3 main.py
+CMD python3 ./server.py
